--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,6 +1,20 @@
 {% extends 'base.html' %}
+
 {% load static %}
 
 {% block content %}
 
+	<!-- Navigation-->
+	{% include 'nav.html'%}
+
+	<!-- Page Header-->
+	{% include 'header.html'%}
+
+	<!--container-->
+	{% include 'container.html'%}
+
+	<!--footer-->
+	{% include 'footer.html' %}
+		
+	
 {% endblock %}
