modificações em templates

--- a/core/templates/container.html
+++ b/core/templates/container.html
@@ -1,10 +1,20 @@
 {% load static %}
 <!-- Main Content-->
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="">
                     <!-- Post preview-->
-                    <div class="post-preview">
+                    
+                    <!-- Divider-->
+
+                    <!--Postes-->
+
+                    <div class="row">
+                      <div class="col-md-1">.col-md-3
+
+                      </div>
+                      <div class="col-md-8">.col-md-8
+                        <div class="post-preview">
                         <a href="post.html">
                             <h2 class="post-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </h2>
                             <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
@@ -15,8 +25,11 @@
                             on September 24, 2022
                         </p>
                     </div>
-                    <!-- Divider-->
-                    
+                      </div>
+                      <div class="col-md-3">.col-md-3
+                      </div>
+                    </div>
+                                        
                     
                     <!-- Divider-->
                     <hr class="my-4" />
