--- a/core/templates/cadastro.html
+++ b/core/templates/cadastro.html
@@ -37,28 +37,42 @@
                            </div>
                            <div class="col-md-6 col-lg-7 d-flex align-items-center">
                               <div class="card-body p-4 p-lg-5 text-black">
-                                 <form>
-                                    <div class="d-flex align-items-center mb-3 pb-1">
-                                       <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                                       <span class="h1 fw-bold mb-0">Logo</span>
+                                 <form class="">
+                                    <!-- 2 column grid layout with text inputs for the first and last names -->
+                                    <div class="row mb-4 d-flex justify-content-center">
+                                       <div class="col">
+                                          <div class="form-outline">
+                                             <input type="text" id="form3Example1" class="form-control" />
+                                             <label class="form-label" for="form3Example1">First name</label>
+                                          </div>
+                                       </div>
+                                       <div class="col">
+                                          <div class="form-outline">
+                                             <input type="text" id="form3Example2" class="form-control" />
+                                             <label class="form-label" for="form3Example2">Last name</label>
+                                          </div>
+                                       </div>
                                     </div>
-                                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+                                    <!-- Email input -->
+                                    <div class="form-outline ">
+                                       <input type="email" id="form3Example3" class="form-control" />
+                                       <label class="form-label d-flex justify-content-center" for="form3Example3">Email address</label>
+                                    </div>
+                                    <!-- Password input -->
                                     <div class="form-outline mb-4">
-                                       <input type="email" id="form2Example17" class="form-control form-control-lg" />
-                                       <label class="form-label" for="form2Example17">Email address</label>
+                                       <input type="password" id="form3Example4" class="form-control" />
+                                       <label class="form-label" for="form3Example4">Password</label>
                                     </div>
-                                    <div class="form-outline mb-4">
-                                       <input type="password" id="form2Example27" class="form-control form-control-lg" />
-                                       <label class="form-label" for="form2Example27">Password</label>
+                                    <!-- Checkbox -->
+                                    
+                                    <!-- Submit button -->
+                                    <div class="btn">
+                                       <button type="submit" class="btn btn-primary justify-content-center">Sign up</button>
+                                       
                                     </div>
-                                    <div class="pt-1 mb-4">
-                                       <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
-                                    </div>
-                                    <a class="small text-muted" href="#!">Forgot password?</a>
-                                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="{% url 'cadastro'%}"
-                                       style="color: #393f81;">Register here</a></p>
-                                    <a href="#!" class="small text-muted">Terms of use.</a>
-                                    <a href="#!" class="small text-muted">Privacy policy</a>
+                                   
+                                    <!-- Register buttons -->
+                                    
                                  </form>
                               </div>
                            </div>
