todos os templates prontos

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% load static %}
-
+{% block title %}
+   Game Stattion | Pagina inicial
+{% endblock %}
 {% block content %}
 
 	<!-- Navigation-->
