--- a/core/templates/cadastro.html
+++ b/core/templates/cadastro.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+   Cadastro
+{% endblock %}
 {% block content %}
 <div>
    <div class="row">
@@ -14,7 +17,7 @@
                <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ms-auto py-4 py-lg-0">
                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="index.html">Home</a></li>
-                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="about.html">About</a></li>
+                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="{% url 'about' %}">About</a></li>
                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="post.html">Post</a></li>
                   </ul>
                </div>
@@ -42,7 +45,7 @@
                                     <div class="row mb-4 d-flex justify-content-center">
                                        <div class="col">
                                           <div class="form-outline">
-                                             <input type="text" id="form3Example1" class="form-control" />
+                                               <input type="text" id="form3Example1" class="form-control" />
                                              <label class="form-label" for="form3Example1">First name</label>
                                           </div>
                                        </div>
