--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -31,7 +31,7 @@
                             </li>
                             
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2022</div>
+                        <div class="small text-center text-muted fst-italic">&copy; Diego Carlos 2022</div>
                     </div>
                 </div>
             </div>
