--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+   Login
+{% endblock %}
 {% block content %}
 <div>
    <div class="row">
@@ -13,9 +16,9 @@
                </button>
                <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="index.html">Home</a></li>
-                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="about.html">About</a></li>
-                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="post.html">Post</a></li>
+                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="{% url 'index' %}">Home</a></li>
+                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="{% url 'about' %}">About</a></li>
+                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="{% url 'post' %}">Post</a></li>
                   </ul>
                </div>
             </div>
@@ -39,8 +42,8 @@
                               <div class="card-body p-4 p-lg-5 text-black">
                                  <form>
                                     <div class="d-flex align-items-center mb-3 pb-1">
-                                       <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                                       <span class="h1 fw-bold mb-0">Logo</span>
+                                       <i class="fas fa-ubes fa-2x me-3" style="color: #ff6219;"></i>
+                                       <span class="h1 fw-bold mb-0">Game Station</span>
                                     </div>
                                     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
                                     <div class="form-outline mb-4">
@@ -57,8 +60,7 @@
                                     <a class="small text-muted" href="#!">Forgot password?</a>
                                     <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="{% url 'cadastro'%}"
                                        style="color: #393f81;">Register here</a></p>
-                                    <a href="#!" class="small text-muted">Terms of use.</a>
-                                    <a href="#!" class="small text-muted">Privacy policy</a>
+
                                  </form>
                               </div>
                            </div>
