modificações em templates

--- a/core/templates/container.html
+++ b/core/templates/container.html
@@ -15,13 +15,13 @@
                       </div>
                       <div class="col-md-8">.col-md-8
                         <div class="post-preview">
-                        <a href="post.html">
+                        <a href="{% url 'post' %}">
                             <h2 class="post-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </h2>
                             <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
                         </a>
                         <p class="post-meta">
                             Posted by
-                            <a href="#!">Start Bootstrap</a>
+                            <a href="#!">kh kjh jh asd</a>
                             on September 24, 2022
                         </p>
                     </div>
