--- a/core/templates/cadastro.html
+++ b/core/templates/cadastro.html
@@ -16,9 +16,9 @@
                </button>
                <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="index.html">Home</a></li>
+                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="{% url 'index' %}">Home</a></li>
                      <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="{% url 'about' %}">About</a></li>
-                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="post.html">Post</a></li>
+                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 text-primary" href="{% url 'post' %}">Post</a></li>
                   </ul>
                </div>
             </div>
