--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -39,15 +39,9 @@
                               <div class="card-body text-black">
                                 <h1 class="card-title text-center">Sobre</h1>
                                 <p class="card-text text-center">
-                                   Game Station é uma plataforma de jogos online que foi criada para ajudar os usuários
-                                    a encontrar jogos que possam se divertir.
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                    unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                    t has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                                    essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-                                    Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-                                    PageMaker including versions of Lorem Ipsum.
+                                  {% for s in sobre%}
+                                    {{s}}
+                                 {%endfor%}
                                 </p>
                               </div>
                            </div>
