--- a/core/templates/container.html
+++ b/core/templates/container.html
@@ -15,15 +15,18 @@
                       </div>
                       <div class="col-md-8">.col-md-8
                         <div class="post-preview">
-                        <a href="{% url 'post' %}">
-                            <h2 class="post-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </h2>
-                            <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-                        </a>
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">kh kjh jh asd</a>
-                            on September 24, 2022
-                        </p>
+                        {% for p in  post %}
+                            <a href="{% url 'post' %}">
+                                <h2 class="post-title">{{ post.titulo_post}}</h2>
+                                
+                                {{ post.conteudo_post }}
+                            </a>
+                            <p class="post-meta">
+                                Posted by
+                                <a href="#!">kh kjh jh asd</a>
+                                on September 24, 2022
+                            </p>
+                        {% endfor %}
                     </div>
                       </div>
                       <div class="col-md-3">.col-md-3
