--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -15,6 +15,10 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        
+        <!--Bloco para usar outros css se precisar-->
+        {% block css %}
+        {%endblock%}
     </head>
     <body>
 
@@ -27,6 +31,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
+        {% block js %}{% endblock js %}
 
     </body>
 </html>
