--- a/core/templates/container.html
+++ b/core/templates/container.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!-- Main Content-->
-        <div class="container">
+        <div class="container container-post">
             <div class="row justify-content-center">
                 <div class="">
                     <!-- Post preview-->
